--- a/WEB/Views/_ViewImports.cshtml
+++ b/WEB/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WEB
 @using WEB.Models
 @using ENTITY.Entities
+@using ENTITY.Models.Articles
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
