Login ve Logout işlemleri.

--- a/WEB/Areas/Admin/Views/_ViewImports.cshtml
+++ b/WEB/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using ENTITY.Entities
+@using ENTITY.Models.Users
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
