--- a/WEB/Areas/Admin/Views/_ViewImports.cshtml
+++ b/WEB/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ENTITY.Entities
 @using ENTITY.Models.Users
+@using ENTITY.Models.Articles
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
