--- a/WEB/Areas/Admin/Views/Article/Index.cshtml
+++ b/WEB/Areas/Admin/Views/Article/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿@model List<ArticleModel>
 
- <!-- Basic Bootstrap Table -->
+ div class="container-xxl flex-grow-1 container-p-y">
+<h4 class="fw-bold py-3 mb-4">
+    <span class="text-muted fw-light">Makale Yönetimi /</span> Makaleler
+</h4>
+
+<!-- Basic Bootstrap Table -->
 <div class="card">
     <div class="table-responsive text-nowrap m-5">
 
@@ -76,6 +81,8 @@
     </div>
 </div>
 <!--/ Basic Bootstrap Table -->
+</div>
+
 @section Scripts {
     <script src="~/js/articleIndex.js" type="application/ecmascript"></script>
 }
