--- a/WEB/Areas/Admin/Views/Article/Index.cshtml
+++ b/WEB/Areas/Admin/Views/Article/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<ArticleModel>
+﻿@using WEB.Const
+@model List<ArticleModel>
 
  div class="container-xxl flex-grow-1 container-p-y">
 <h4 class="fw-bold py-3 mb-4">
