--- a/WEB/Areas/Admin/Views/Auth/AccessDenied.cshtml
+++ b/WEB/Areas/Admin/Views/Auth/AccessDenied.cshtml
@@ -6,7 +6,7 @@
 
 <!DOCTYPE html>
 <!-- =========================================================
-* Sneat - Bootstrap 5 HTML Admin Template - Pro | v1.0.0
+* Sneat - Bootstrap 5 HTML Admin Template - Pro | 
 ==============================================================
 
 * Product Page: https://themeselection.com/products/sneat-bootstrap-html-admin-template/
